<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.shoeDetail.ShoeDetailFragment">

    <!-- Used to add an item (ViewGroup) to the center of the screen -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Used to group and vertically align Views -->
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/register_shoe"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <!-- Used to add margin in a set of aligned views -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_name"
                    />

                <EditText
                    android:id="@+id/edit_text_shoe_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:layout_marginBottom="6dp"
                    android:hint="@string/type_shoe_name_here"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    tools:targetApi="o"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company"/>

                <EditText
                    android:id="@+id/edit_text_company"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:layout_marginBottom="6dp"
                    android:hint="@string/type_the_company_here"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    tools:targetApi="o"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_size"/>

                <EditText
                    android:id="@+id/edit_text_shoe_size"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="6dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/type_shoe_size_here"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    tools:targetApi="o" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#546E7A"
                    android:text="@string/description"/>

                <EditText
                    android:id="@+id/edit_text_description"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:layout_marginBottom="6dp"
                    android:hint="@string/type_the_description_here"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    tools:targetApi="o"/>

            </LinearLayout>

            <!-- Used to change the orientation of aligned views -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_save_shoe"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/button_cancel_shoe"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
