<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="16"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:hint="@string/password_hint"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <Button
                    android:id="@+id/createButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create"/>

                <TextView
                    android:id="@+id/linkExistsAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exists_account"
                    android:textColor="@android:color/holo_blue_light" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>