<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.instruction.InstructionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoestore_is_app_to_buy_shoes_online"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/the_user_will_have_access_to_a_list_of_shoes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/the_user_could_select_a_shoe_to_see_its_details" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonShoeList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/open_shoe_list"
            style="?android:attr/buttonBarButtonStyle"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>